--- a/backend/package.json
+++ b/backend/package.json
@@ -1,14 +1,12 @@
 {
   "name": "ekart-backend",
   "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
   "type": "module",
+  "main": "index.js",
   "scripts": {
-    "start": "nodemon index.js"
+    "start": "node index.js",
+    "dev": "nodemon index.js"
   },
-  "author": "",
-  "license": "ISC",
   "dependencies": {
     "bcrypt": "^6.0.0",
     "bcryptjs": "^3.0.3",
@@ -21,7 +19,6 @@
     "mongoose": "^9.1.6",
     "multer": "^2.0.2",
     "nodemailer": "^8.0.0",
-    "nodemon": "^3.1.11",
     "razorpay": "^2.9.6"
   }
 }
