--- a/backend/package.json
+++ b/backend/package.json
@@ -8,17 +8,18 @@
   },
 
   "dependencies": {
-    "bcrypt": "^6.0.0",
-    "bcryptjs": "^3.0.3",
-    "cloudinary": "^2.9.0",
-    "cors": "^2.8.6",
-    "datauri": "^4.1.0",
-    "dotenv": "^17.2.3",
-    
-    "jsonwebtoken": "^9.0.3",
-    "mongoose": "^9.1.6",
-    "multer": "^2.0.2",
-    "nodemailer": "^8.0.0",
-    "razorpay": "^2.9.6"
-  }
+  "express": "^4.19.2",
+  "bcrypt": "^6.0.0",
+  "bcryptjs": "^3.0.3",
+  "cloudinary": "^2.9.0",
+  "cors": "^2.8.6",
+  "datauri": "^4.1.0",
+  "dotenv": "^17.2.3",
+  "jsonwebtoken": "^9.0.3",
+  "mongoose": "^9.1.6",
+  "multer": "^2.0.2",
+  "nodemailer": "^8.0.0",
+  "razorpay": "^2.9.6"
+}
+
 }
